--- a/popup.html
+++ b/popup.html
@@ -1,22 +1,20 @@
 <!doctype html>
 <html>
-  <head>
-    <title>Liga lol Streaming</title>
-    <style>
-      body {
-        font-family: "Segoe UI", "Lucida Grande", Tahoma, sans-serif;
-        font-size: 100%;
-      }
-      h1 {
-        /* avoid an excessively wide status text */
-        width: 600px;
-      }
-    </style>
-	
-    <script src="scripts/popup.js"></script>
-  </head>
-  <body>
-	<h1>Liga LOL Streaming</h1>
-  </body>
+	<head>
+    	<title>Liga lol Streaming</title>
+		<style>
+			body {
+				font-family: "Segoe UI", "Lucida Grande", Tahoma, sans-serif;
+				font-size: 100%;
+			}
+			h1 {
+				width: 600px;
+			}
+		</style>
+		<script src="scripts/background.js"></script>
+    	<script src="scripts/popup.js"></script>
+	</head>
+	<body>
+		<h1>Liga LOL Streaming</h1>
+	</body>
 </html>
-
